# utility_bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  celerybeat-schedule.bak  celerybeat-schedule.dir  main.py  pyproject.toml
api/database/: __init__.py  config.py  errors.py  sessions.py
api/migrations/: env.py
api/migrations/versions/: 09c5c16e1a52_users.py  87f8dc9d429f_init.py  f92f4eef0b27_articles_created_at.py
api/parser/: add_articles.py  helpers.py  manager.py  parser.py  tasks.py
api/repositories/: articles.py  base.py  districts.py  tags.py  users.py
api/routers/: articles.py  protected.py  users.py
api/schemas/: __init__.py  articles.py  districts.py  link_schemas.py  tags.py  users.py
bot/: Dockerfile  config.py  main.py  pyproject.toml
bot/config_data/: config.py
bot/handlers/: district_handlers.py  districts.py
bot/keyboards/: district_keyboard.py  main_menu.py
bot/lexicon/: lexicon_ru.py
bot/receiver/: driver.py  get_data.py  logger.py
bot/schemas/: schemas.py
bot/sender/: bot_client.py  message.py
bot/users/: users.py
bot/utils/: async_items.py  async_iterator.py  btn_callback_factory.py  checkboxes.py  commands.py  districts.py  formatter.py  get_data.py
