[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Julia Kuznetsova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
aioredis = "^2.0.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
